--- a/.github/workflows/wf-module-two-NodejsCI.yml
+++ b/.github/workflows/wf-module-two-NodejsCI.yml
@@ -5,7 +5,7 @@ on:
     branches: ["main"]
 jobs:
   build:
-    runs-on: ${{ matrix.node-version }}
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-lastest, windows-2016]
