--- a/.github/workflows/wf-module-two-NodejsCI.yml
+++ b/.github/workflows/wf-module-two-NodejsCI.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-lastest, windows-2016]
-        node-version: [8.x, 10.x]
+        node-version: [10, 12]
     steps:
       - uses: actions/checkout@v3
       - name: NodejsCI build action
