--- a/.github/workflows/actions/nodejsbuild/action.yml
+++ b/.github/workflows/actions/nodejsbuild/action.yml
@@ -5,8 +5,8 @@ runs:
   steps:
   - uses: actions/setup-node@v1
     with:
-      node-version: ${{ matrix.node-version }}
-  - name: Use Node.js ${{ matrix.node-version }}      
+      node-version: 10
+  - name: Use Node.js 10      
     run: |
       npm ci 
       npm run build --if-present
