--- a/.github/workflows/wf-module-two-NodejsCI.yml
+++ b/.github/workflows/wf-module-two-NodejsCI.yml
@@ -5,11 +5,7 @@ on:
     branches: ["main"]
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-lastest, windows-2016]
-        node-version: [10, 12]
+    runs-on: ubuntu-lastest
     steps:
       - uses: actions/checkout@v3
       - name: NodejsCI build action
