--- a/.github/workflows/wf-module-two-NodejsCI.yml
+++ b/.github/workflows/wf-module-two-NodejsCI.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: ["main"]
 jobs:
-  build:
+  nodejsbuild:
     runs-on: ubuntu-lastest
     steps:
       - uses: actions/checkout@v3
