--- a/.github/workflows/actions/nodejsbuild/action.yml
+++ b/.github/workflows/actions/nodejsbuild/action.yml
@@ -5,8 +5,8 @@ runs:
   steps:
   - uses: actions/setup-node@v3
     with:
-      node-version: 16
-  - name: Use Node.js 16      
+      node-version: ${{ matrix.node-version }}
+  - name: Use Node.js ${{ matrix.node-version }}      
     run: |
       npm run build --if-present
     shell: bash
