--- a/.github/workflows/wf-module-two-NodejsCI.yml
+++ b/.github/workflows/wf-module-two-NodejsCI.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-2016]
+        os: [ubuntu-latest, windows-latest]
         node-version: [14, 16]
     steps:
       - uses: actions/checkout@v3
