--- a/.github/workflows/wf-module-two-NodejsCI.yml
+++ b/.github/workflows/wf-module-two-NodejsCI.yml
@@ -14,3 +14,13 @@ jobs:
       - uses: actions/checkout@v3
       - name: NodejsCI build action
         uses: ./.github/workflows/actions/nodejsbuild
+  nodejstest:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+        node-version: [14, 16]
+    steps:
+      - uses: actions/checkout@v3
+      - name: NodejsCI build action
+        uses: ./.github/workflows/actions/nodejstest
