--- a/.github/workflows/actions/nodejstest/action.yml
+++ b/.github/workflows/actions/nodejstest/action.yml
@@ -8,5 +8,6 @@ runs:
       node-version: ${{ matrix.node-version }}
   - name: Use Node.js ${{ matrix.node-version }}      
     run: |
+      npm install --global mocha
       npm test
     shell: bash
