--- a/.github/workflows/wf-module-two-NodejsCI.yml
+++ b/.github/workflows/wf-module-two-NodejsCI.yml
@@ -27,5 +27,9 @@ jobs:
         node-version: [14, 16]
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/download-artifact@main
+        with:
+          name: nodejs artifact
+          path: public
       - name: NodejsCI test action
         uses: ./.github/workflows/actions/nodejstest
