--- a/.github/workflows/actions/nodejsbuild/action.yml
+++ b/.github/workflows/actions/nodejsbuild/action.yml
@@ -8,5 +8,6 @@ runs:
       node-version: ${{ matrix.node-version }}
   - name: Use Node.js ${{ matrix.node-version }}      
     run: |
+      npm install
       npm run build --if-present
     shell: bash
