--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "sample npm application",
   "main": "app.js",
   "scripts": {
-    "build": "echo 'hello build'"
+    "build": "echo 'hello build'",
     "test": "mocha"
   },
   "repository": {
